--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
   </head>
   <body>
     <!-- header start  -->
-    <header></header>
+    <header>
+      <nav class="navbar">
+        <ul class="left-nav-item">
+          <li><img src="./images/icons/logo.png" alt="" /></li>
+          <li><a href="">Idea</a></li>
+        </ul>
+        <ul class="right-nav-item">
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Works </a></li>
+          <li><img src="./images/icons/profile.png" alt="" /></li>
+        </ul>
+      </nav>
+    </header>
     <!-- header end  -->
 
     <!-- main section start  -->
